# walkgeek

./: .gitignore  CMakeLists.txt  LICENSE  ProjectHome.md  README  README_RU  README_SIMULATOR  TODO  cmake_patch_arm_none_eabi.diff  cmake_patch_linaro.diff  crlf_to_lf.sh  debug-simulator.gdb  debug.gdb.origin  debug_msc.gdb  flags.cmake  gnu_toolchain.cmake  index.html  intro_ru.md  main.c  mkindex.sh  openocd_stlinkv2.cfg  params.json  patch_cmake.sh  stm32f4x.cfg
bsp/: .gitignore  bsp.cmake  keypad.c  subdir.cmake
bsp/freertos/GCC/ARM_CM3/: port.c  portmacro.h
bsp/freertos/GCC/ARM_CM4F/: port.c
bsp/simulator/: bsp.c  bsp_config.h  cpu_config.h  diskio_sdio.c  disp_1100.h  types.h
bsp/stm32f4_discovery/: audio_if.c  bsp.c  bsp_config.h  diskio_sdio.c  disp_1100.c  disp_1100.h  keyboard.c  stm324xg_eval_sdio_sd.c  stm324xg_eval_sdio_sd.h  stm32f4_discovery.c  stm32f4_discovery_audio_codec.c  stm32f4_discovery_audio_codec.h  subdir.cmake  syscalls.c
bsp/stm32f4xx/: cmsis.cmake  cpu.cmake  stdperiph.cmake  stm32_flash.ld.in  subdir.cmake  usblib.cmake  usblib_device.cmake  usblib_host.cmake
bsp/stm32f4xx/inc/: FreeRTOSConfig.h  cpu.h  cpu_config.h  stm32f4xx_conf.h  types.h  usb_conf.h  usbd_audio_core.h  usbd_cdc_core.h  usbd_cdc_vcp.h  usbd_conf.h  usbd_desc.h  usbd_desc_audio.h  usbd_desc_msc.h  usbd_storage_msd.h  usbh_usr.h
bsp/stm32f4xx/src/: cpu.c  mm_user.c  stm32f4xx_it.c  subdir.cmake  syscalls.c  system_stm32f4xx.c  usb_bsp.c  usbd_audio_core.c  usbd_bsp.c  usbd_cdc_core.c  usbd_cdc_vcp.c  usbd_desc_audio.c  usbd_desc_cdc.c  usbd_desc_msc.c  usbd_storage_msd.c  usbd_usr.c  usbh_bsp.c  usbh_usr.c
config/: ffconf.h  software_conf.h  subdir.cmake
include/: assert.h  audio_buffer.h  audio_if.h  bsp.h  circ_buffer.h  common.h  cpu.h  custom_support.h  decoder.h  disp_1100.h  display.h  ffconf.h  keyboard.h  keypad.h  mediafile.h  metadata.h  navigator.h  nestedfilter.h  player.h  playlist.h  powermanager.h  profile.h  scheduler.h  semaphore.h  software_conf.h  subdir.cmake  system.h  trace.h  ui.h  usbd_msc.h  ustdio.h  var.h
include/nuttx/: config.h  mm.h
include/ogg/: ogg.h  os_types.h
lib/: CMakeLists.txt  subdir.cmake
lib/fat_fs/: diskio.h  integer.h  subdir.cmake
lib/fat_fs/option/: syscall.c
lib/freertos/: readme.txt
lib/freertos/include/: portable.h
lib/freertos/portable/MemMang/: heap_3.c
lib/minIni/: minGlue-FatFs.h  minGlue.h  minIni.c  minIni.h  test.c
lib/mm/: mm_free.c  mm_initialize.c  mm_mallinfo.c  mm_sem.c  mm_user.c  subdir.cmake
lib/mp3/: subdir.cmake
lib/mp3-fixpt-helix/: mp3dec.c
lib/mp3-fixpt-helix/pub/: mp3common.h  mp3dec.h
lib/mp3-fixpt-helix/real/: assembly.h  buffers.c  coder.h
lib/mp3/fixpt-helix/: CMakeLists.txt  mp3dec.c  subdir.cmake
lib/mp3/fixpt-helix/real/: buffers.c  dqchan.c  huffman.c
lib/ogg/: framing.c
lib/opus/: CMakeLists.txt  config.h  subdir.cmake
lib/opus/celt/: celt.c  fixed_arm5e.h  os_support.h
lib/opus/ogg/: os_types.h
lib/opus/src/: opus_decoder.c
lib/stdio/: lib_libdtoa.c  lib_libvsprintf.c  subdir.cmake  ustdio.c  ustdlib.c
lib/utf8/: subdir.cmake  utf8.c  utf8.h
pcb/: .gitignore  gerber-txt-info.sh  sfe-gerb274x.cam  walkgeek-eagle.lbr  walkgeek.brd  walkgeek.sch
pcb/gerber/: walkgeek_board_edge.gbr  walkgeek_bottom.gbr  walkgeek_bottommask.gbr  walkgeek_drill.xln  walkgeek_top.gbr  walkgeek_topmask.gbr  walkgeek_topsilk.gbr
pcb/gerber/info/: walkgeek_board_edge.txt  walkgeek_bottom.txt  walkgeek_bottommask.txt  walkgeek_drill.txt  walkgeek_top.txt  walkgeek_topmask.txt  walkgeek_topsilk.txt
src/: audio_buffer.c  audio_if.c  keypad.c  navigator.c  nestedfilter.c  powermanager.c  scheduler.c  subdir.cmake  system.c  ui.c  usbd.c  usbd_msc.c
src/player/: decoder.c  decoder.h  decoders.c  mediafile.c  mediafile.h  mp3_decoder.c  mp3_decoder.h  opus_decoder.c  opus_decoder.h  opusdec.c  player.c  subdir.cmake  wav_decoder.c  wav_decoder.h
src/ui/: display.c  player_ui.c  ui.c  usb_ui.c
