INCLUDE(gnu_toolchain.cmake)

PROJECT(walkgeek)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
ENABLE_LANGUAGE(ASM)

ADD_DEFINE(USE_FULL_ASSERT)

INCLUDE_SUBDIR(include)
INCLUDE_SUBDIR(config)

INCLUDE_SUBDIR(bsp)
INCLUDE_SUBDIR(src)
INCLUDE_SUBDIR(lib)

SET (SOURCES ${SOURCES}
    main.c
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${HEADERS} ${SOURCES})
TARGET_FINALLY(${CMAKE_PROJECT_NAME}.elf)
